--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 </a>
                 </div>
                 </div>
+
+
+
+                <div class="abt">
+
+                    <h1>Made with <a href="github.com">Github</a> and <a href="vercel.com"> Vercel</a></h1>
+                    <p>Developed By <a href="github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
+
+
+                </div>
     
 </body>
 </html>
