--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <a href="/subjects/addition.html">
     <div class="selection btn">
     <div class="selection">
-    <button>Start Learning Addition +</button>
+    <button>Start Learning Addition + (not finished)</button>
 </a>
     </div>
     </div>
@@ -25,7 +25,7 @@
     <a href="/subjects/subtraction.html">
         <div class="selection btn">
         <div class="selection">
-        <button>Start Learning Subtraction -</button>
+        <button>Start Learning Subtraction - (not implemented yet)</button>
     </a>
         </div>
         </div>
@@ -33,7 +33,7 @@
         <a href="/subjects/multiplication.html">
             <div class="selection btn">
             <div class="selection">
-            <button>Start Learning Multiplication *(/x)</button>
+            <button>Start Learning Multiplication *(/x) (not implemented yet)</button>
         </a>
             </div>
             </div>
@@ -41,7 +41,7 @@
             <a href="/subjects/division.html">
                 <div class="selection btn">
                 <div class="selection">
-                <button>Start Learning Division /(/÷)</button>
+                <button>Start Learning Division /(/÷) (not implemented yet)</button>
                 </a>
                 </div>
                 </div>
@@ -49,6 +49,7 @@
 
 
                 <div class="abt">
+                    <h1>SPECIAL THANKS:</h1>
 
                     <h1>Made with <a href="github.com">Github</a> and <a href="vercel.com"> Vercel</a></h1>
                     <p>Developed By <a href="github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
