--- a/subjects/addtition/1s.html
+++ b/subjects/addtition/1s.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="abt">
-        <h1>Learn 1's</h1>
+        <h1>1's Excercises</h1>
         </div>
 
         <div class="1s">
