--- a/subjects/addtition/2s.html
+++ b/subjects/addtition/2s.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="abt">
-        <h1>Learn 2's</h1>
+        <h1>2's Excercises</h1>
         </div>
 
 <div class="2s">
