--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <div class="abt">
     <h1>Mathy+-=</h1>
-    <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills</p>
-    <p>have someone check on your work once you finish it</p>
+    <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
+    <p>Make sure to have someone check on your work once you finish your practice!</p>
 </div>
 
 <a href="/subjects/addition.html">
