--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="abt">
     <h1>Mathy+-=</h1>
     <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
-    <p>Make sure to have someone check on your work once you finish your practice!</p>
+    <p>Also make sure to have someone check on your work once you finish your practice!</p>
 </div>
 
 <a href="/subjects/addition.html">
