--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                     <h1>Made with <a href="github.com">Github</a> and <a href="vercel.com"> Vercel</a></h1>
                     <p>Developed By <a href="github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
-<p>Made for <a href="humbleisd.net"><abbr title="(Humble independent School District)">HumbleISD</abbr></p>
+<p>Made for <a href="https://humbleisd.net"><abbr title="(Humble independent School District)">HumbleISD</abbr></p>
 
                 </div>
     
