--- a/math-types/addtition/4s.html
+++ b/math-types/addtition/4s.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mathy+-= | 4's</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <h1>4's Excercises</h1>
         </div>
 
-<div class="2s">
+<div class="excercises">
     <h1>2 excercises</h1>
     <p>4 + 1 <input placeholder="4 + 1"></input></p>
     <p>4 + 2 <input placeholder="4 + 2"></input></p>
