--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mathy+-=</title>
     <link rel="stylesheet" href="/styles.css">
-    <link rel="icon" type="image/png" href="/favicon.ico">
 </head>
 <body>
 
@@ -15,15 +14,15 @@
     <p>Also make sure to have someone check on your work once you finish your practice!</p>
 </div>
 
-<a href="/subjects/addition.html">
+<a href="/math-types/addition.html">
     <div class="selection btn">
     <div class="selection">
-    <button>Start Learning Addition + (not finished)</button>
+    <button>Start Learning Addition +</button>
 </a>
     </div>
     </div>
 
-    <a href="/subjects/subtraction.html">
+    <a href="/math-types/subtraction.html">
         <div class="selection btn">
         <div class="selection">
         <button>Start Learning Subtraction - (not implemented yet)</button>
@@ -31,7 +30,7 @@
         </div>
         </div>
 
-        <a href="/subjects/multiplication.html">
+        <a href="/math-types/multiplication.html">
             <div class="selection btn">
             <div class="selection">
             <button>Start Learning Multiplication *(/x) (not implemented yet)</button>
@@ -39,10 +38,10 @@
             </div>
             </div>
 
-            <a href="/subjects/division.html">
+            <a href="/math-types/division.html">
                 <div class="selection btn">
                 <div class="selection">
-                <button>Start Learning Division /(/÷) (not implemented yet)</button>
+                <button>Start Learning Division /(/÷) (not finished yet)</button>
                 </a>
                 </div>
                 </div>
