--- a/math-types/subtraction/8s.html
+++ b/math-types/subtraction/8s.html
@@ -14,16 +14,16 @@
 
 <div class="excercises">
     <h1>8's excercises</h1>
-    <p>8 / 1 <input placeholder="8 / 1"></input></p>
-    <p>8 / 2 <input placeholder="8 / 2"></input></p>
-    <p>8 / 3 <input placeholder="8 / 3"></input></p>
-    <p>8 / 4 <input placeholder="8 / 4"></input></p>
-    <p>8 / 5 <input placeholder="8 / 5"></input></p>
-    <p>8 / 6 <input placeholder="8 / 6"></input></p>
-    <p>8 / 7 <input placeholder="8 / 7"></input></p>
-    <p>8 / 8 <input placeholder="8 / 8"></input></p>
-    <p>8 / 9 <input placeholder="8 / 9"></input></p>
-    <p>8 / 10 <input placeholder="8 / 10"></input></p>
+    <p>8 - 1 <input placeholder="8 - 1"></input></p>
+    <p>8 - 2 <input placeholder="8 - 2"></input></p>
+    <p>8 - 3 <input placeholder="8 - 3"></input></p>
+    <p>8 - 4 <input placeholder="8 - 4"></input></p>
+    <p>8 - 5 <input placeholder="8 - 5"></input></p>
+    <p>8 - 6 <input placeholder="8 - 6"></input></p>
+    <p>8 - 7 <input placeholder="8 - 7"></input></p>
+    <p>8 - 8 <input placeholder="8 - 8"></input></p>
+    <p>8 - 9 <input placeholder="8 - 9"></input></p>
+    <p>8 - 10 <input placeholder="8 - 10"></input></p>
     </div>
     
 
