--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <h1>Mathy+-=</h1>
     <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
     <p>Also make sure to have someone check on your work once you finish your practice!</p>
+    <a href="/app-release.apk" download>Download for Android here:</button>
 </div>
 
 <a href="/math-types/addition.html">
     <div class="selection btn">
     <div class="selection">
-    <button>Start Learning Addition +</button>
+    <button>Start Learning Addition (+)</button>
 </a>
     </div>
     </div>
@@ -25,7 +26,7 @@
     <a href="/math-types/subtraction.html">
         <div class="selection btn">
         <div class="selection">
-        <button>Start Learning Subtraction - (not implemented yet)</button>
+        <button>Start Learning Subtraction (-)</button>
     </a>
         </div>
         </div>
@@ -33,7 +34,7 @@
         <a href="/math-types/multiplication.html">
             <div class="selection btn">
             <div class="selection">
-            <button>Start Learning Multiplication *(/x) (not implemented yet)</button>
+            <button>Start Learning Multiplication (* or x) (not implemented yet)</button>
         </a>
             </div>
             </div>
@@ -41,7 +42,7 @@
             <a href="/math-types/division.html">
                 <div class="selection btn">
                 <div class="selection">
-                <button>Start Learning Division /(/÷) (not finished yet)</button>
+                <button>Start Learning Division (/ or ÷) (not finished yet)</button>
                 </a>
                 </div>
                 </div>
@@ -51,9 +52,9 @@
                 <div class="abt">
                     <h1>SPECIAL THANKS:</h1>
 
-                    <h1>Made with <a href="github.com">Github</a> and <a href="vercel.com"> Vercel</a></h1>
-                    <p>Developed By <a href="github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
-<p>Made for <a href="https://humbleisd.net"><abbr title="(Humble independent School District)">HumbleISD</abbr></p>
+                    <h1>Made with <a href="https://github.com">Github</a> and <a href="https://vercel.com"> Vercel</a></h1>
+                    <p>Developed By <a href="https://github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
+<p>Made for <a href="https://humbleisd.net"><abbr title="Humble independent School District">HumbleISD</abbr></p>
 
                 </div>
     
