--- a/math-types/subtraction/10s.html
+++ b/math-types/subtraction/10s.html
@@ -14,16 +14,16 @@
 
 <div class="excercises">
     <h1>1's excercises</h1>
-    <p>10 / 1 <input placeholder="10 / 1"></input></p>
-    <p>10 / 2 <input placeholder="10 / 2"></input></p>
-    <p>10 / 3 <input placeholder="10 / 3"></input></p>
-    <p>10 / 4 <input placeholder="10 / 4"></input></p>
-    <p>10 / 5 <input placeholder="10 / 5"></input></p>
-    <p>10 / 6 <input placeholder="10 / 6"></input></p>
-    <p>10 / 7 <input placeholder="10 / 7"></input></p>
-    <p>10 / 8 <input placeholder="10 / 8"></input></p>
-    <p>10 / 9 <input placeholder="10 / 9"></input></p>
-    <p>10 / 10 <input placeholder="10 / 10"></input></p>
+    <p>10 - 1 <input placeholder="10 - 1"></input></p>
+    <p>10 - 2 <input placeholder="10 - 2"></input></p>
+    <p>10 - 3 <input placeholder="10 - 3"></input></p>
+    <p>10 - 4 <input placeholder="10 - 4"></input></p>
+    <p>10 - 5 <input placeholder="10 - 5"></input></p>
+    <p>10 - 6 <input placeholder="10 - 6"></input></p>
+    <p>10 - 7 <input placeholder="10 - 7"></input></p>
+    <p>10 - 8 <input placeholder="10 - 8"></input></p>
+    <p>10 - 9 <input placeholder="10 - 9"></input></p>
+    <p>10 - 10 <input placeholder="10 - 10"></input></p>
     </div>
     
 
