--- a/math-types/subtraction/2s.html
+++ b/math-types/subtraction/2s.html
@@ -14,16 +14,7 @@
 
 <div class="excercises">
     <h1>2's excercises</h1>
-    <p>2 / 1 <input placeholder="2 / 1"></input></p>
-    <p>2 / 2 <input placeholder="2 / 2"></input></p>
-    <p>2 / 3 <input placeholder="2 / 3"></input></p>
-    <p>2 / 4 <input placeholder="2 / 4"></input></p>
-    <p>2 / 5 <input placeholder="2 / 5"></input></p>
-    <p>2 / 6 <input placeholder="2 / 6"></input></p>
-    <p>2 / 7 <input placeholder="2 / 7"></input></p>
-    <p>2 / 8 <input placeholder="2 / 8"></input></p>
-    <p>2 / 9 <input placeholder="2 / 9"></input></p>
-    <p>2 / 10 <input placeholder="2 / 10"></input></p>
+    <p>2 - 1 <input placeholder="2 - 1"></input></p>
     </div>
     
 
