--- a/math-types/subtraction/3s.html
+++ b/math-types/subtraction/3s.html
@@ -14,16 +14,9 @@
 
 <div class="excercises">
     <h1>3's excercises</h1>
-    <p>3 / 1 <input placeholder="3 / 1"></input></p>
-    <p>3 / 2 <input placeholder="3 / 2"></input></p>
-    <p>3 / 3 <input placeholder="3 / 3"></input></p>
-    <p>3 / 4 <input placeholder="3 / 4"></input></p>
-    <p>3 / 5 <input placeholder="3 / 5"></input></p>
-    <p>3 / 6 <input placeholder="3 / 6"></input></p>
-    <p>3 / 7 <input placeholder="3 / 7"></input></p>
-    <p>3 / 8 <input placeholder="3 / 8"></input></p>
-    <p>3 / 9 <input placeholder="3 / 9"></input></p>
-    <p>3 / 10 <input placeholder="3 / 10"></input></p>
+    <p>3 - 1 <input placeholder="3 - 1"></input></p>
+    <p>3 - 2 <input placeholder="3 - 2"></input></p>
+    <p>3 - 3 <input placeholder="3 - 3"></input></p>
     </div>
     
 
