--- a/math-types/subtraction/4s.html
+++ b/math-types/subtraction/4s.html
@@ -14,16 +14,10 @@
 
 <div class="excercises">
     <h1>4's excercises</h1>
-    <p>4 / 1 <input placeholder="4 / 1"></input></p>
-    <p>4 / 2 <input placeholder="4 / 2"></input></p>
-    <p>4 / 3 <input placeholder="4 / 3"></input></p>
-    <p>4 / 4 <input placeholder="4 / 4"></input></p>
-    <p>4 / 5 <input placeholder="4 / 5"></input></p>
-    <p>4 / 6 <input placeholder="4 / 6"></input></p>
-    <p>4 / 7 <input placeholder="4 / 7"></input></p>
-    <p>4 / 8 <input placeholder="4 / 8"></input></p>
-    <p>4 / 9 <input placeholder="4 / 9"></input></p>
-    <p>4 / 10 <input placeholder="4 / 10"></input></p>
+    <p>4 - 1 <input placeholder="4 - 1"></input></p>
+    <p>4 - 2 <input placeholder="4 - 2"></input></p>
+    <p>4 - 3 <input placeholder="4 - 3"></input></p>
+    <p>4 - 4 <input placeholder="4 - 4"></input></p>
     </div>
     
 
