--- a/math-types/subtraction/5s.html
+++ b/math-types/subtraction/5s.html
@@ -13,17 +13,17 @@
         </div>
 
 <div class="excercises">
-    <h1>5 excercises</h1>
-    <p>5 / 1 <input placeholder="5 / 1"></input></p>
-    <p>5 / 2 <input placeholder="5 / 2"></input></p>
-    <p>5 / 3 <input placeholder="5 / 3"></input></p>
-    <p>5 / 4 <input placeholder="5 / 4"></input></p>
-    <p>5 / 5 <input placeholder="5 / 5"></input></p>
-    <p>5 / 6 <input placeholder="5 / 6"></input></p>
-    <p>5 / 7 <input placeholder="5 / 7"></input></p>
-    <p>5 / 8 <input placeholder="5 / 8"></input></p>
-    <p>5 / 9 <input placeholder="5 / 9"></input></p>
-    <p>5 / 10 <input placeholder="5 / 10"></input></p>
+    <h1>5's excercises</h1>
+    <p>5 - 1 <input placeholder="5 - 1"></input></p>
+    <p>5 - 2 <input placeholder="5 - 2"></input></p>
+    <p>5 - 3 <input placeholder="5 - 3"></input></p>
+    <p>5 - 4 <input placeholder="5 - 4"></input></p>
+    <p>5 - 5 <input placeholder="5 - 5"></input></p>
+    <p>5 - 6 <input placeholder="5 - 6"></input></p>
+    <p>5 - 7 <input placeholder="5 - 7"></input></p>
+    <p>5 - 8 <input placeholder="5 - 8"></input></p>
+    <p>5 - 9 <input placeholder="5 - 9"></input></p>
+    <p>5 - 10 <input placeholder="5 - 10"></input></p>
     </div>
     
 
