--- a/math-types/subtraction/6s.html
+++ b/math-types/subtraction/6s.html
@@ -14,16 +14,16 @@
 
 <div class="excercises">
     <h1>6's excercises</h1>
-    <p>6 / 1 <input placeholder="6 / 1"></input></p>
-    <p>6 / 2 <input placeholder="6 / 2"></input></p>
-    <p>6 / 3 <input placeholder="6 / 3"></input></p>
-    <p>6 / 4 <input placeholder="6 / 4"></input></p>
-    <p>6 / 5 <input placeholder="6 / 5"></input></p>
-    <p>6 / 6 <input placeholder="6 / 6"></input></p>
-    <p>6 / 7 <input placeholder="6 / 7"></input></p>
-    <p>6 / 8 <input placeholder="6 / 8"></input></p>
-    <p>6 / 9 <input placeholder="6 / 9"></input></p>
-    <p>6 / 10 <input placeholder="6 / 10"></input></p>
+    <p>6 - 1 <input placeholder="6 - 1"></input></p>
+    <p>6 - 2 <input placeholder="6 - 2"></input></p>
+    <p>6 - 3 <input placeholder="6 - 3"></input></p>
+    <p>6 - 4 <input placeholder="6 - 4"></input></p>
+    <p>6 - 5 <input placeholder="6 - 5"></input></p>
+    <p>6 - 6 <input placeholder="6 - 6"></input></p>
+    <p>6 - 7 <input placeholder="6 - 7"></input></p>
+    <p>6 - 8 <input placeholder="6 - 8"></input></p>
+    <p>6 - 9 <input placeholder="6 - 9"></input></p>
+    <p>6 - 10 <input placeholder="6 - 10"></input></p>
     </div>
     
 
