--- a/math-types/subtraction/7s.html
+++ b/math-types/subtraction/7s.html
@@ -12,18 +12,22 @@
         <h1>7's Excercises</h1>
         </div>
 
+        <div class="abt">
+            <a href="/math-types/subtraction.html">Want To Go Back?</a>
+            </div>
+
 <div class="excercises">
     <h>7's excercises</h1>
-    <p>7 / 1 <input placeholder="7 / 1"></input></p>
-    <p>7 / 2 <input placeholder="7 / 2"></input></p>
-    <p>7 / 3 <input placeholder="7 / 3"></input></p>
-    <p>7 / 4 <input placeholder="7 / 4"></input></p>
-    <p>7 / 5 <input placeholder="7 / 5"></input></p>
-    <p>7 / 6 <input placeholder="7 / 6"></input></p>
-    <p>7 / 7 <input placeholder="7 / 7"></input></p>
-    <p>7 / 8 <input placeholder="7 / 8"></input></p>
-    <p>7 / 9 <input placeholder="7 / 9"></input></p>
-    <p>7 / 10 <input placeholder="7 / 10"></input></p>
+    <p>7 - 1 <input placeholder="7 - 1"></input></p>
+    <p>7 - 2 <input placeholder="7 - 2"></input></p>
+    <p>7 - 3 <input placeholder="7 - 3"></input></p>
+    <p>7 - 4 <input placeholder="7 - 4"></input></p>
+    <p>7 - 5 <input placeholder="7 - 5"></input></p>
+    <p>7 - 6 <input placeholder="7 - 6"></input></p>
+    <p>7 - 7 <input placeholder="7 - 7"></input></p>
+    <p>7 - 8 <input placeholder="7 - 8"></input></p>
+    <p>7 - 9 <input placeholder="7 - 9"></input></p>
+    <p>7 - 10 <input placeholder="7 - 10"></input></p>
     </div>
     
 
