--- a/math-types/subtraction/3s.html
+++ b/math-types/subtraction/3s.html
@@ -10,6 +10,7 @@
     
     <div class="abt">
         <h1>3's Excercises</h1>
+        <a href="/math-types/subtraction.html">Want To Go Back?</a>
         </div>
 
 <div class="excercises">
