--- a/math-types/subtraction/8s.html
+++ b/math-types/subtraction/8s.html
@@ -10,7 +10,9 @@
     
     <div class="abt">
         <h1>8's Excercises</h1>
-        </div>
+            <a href="/math-types/subtraction.html">Want To Go Back?</a>
+            </div>
+            
 
 <div class="excercises">
     <h1>8's excercises</h1>
