--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Mathy+-=</h1>
     <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
     <p>Also make sure to have someone check on your work once you finish your practice!</p>
-    <a href="/app-release.apk" download>Download for Android here:</button>
+    <a href="/app-release.apk" download>Download for Android here:</a>
 </div>
 
 <a href="/math-types/addition.html">
