--- a/math-types/addtition/4s.html
+++ b/math-types/addtition/4s.html
@@ -10,6 +10,7 @@
     
     <div class="abt">
         <h1>4's Excercises</h1>
+        <a href="/math-types/addition.html">Want To Go Back?</a>
         </div>
 
 <div class="excercises">
