--- a/math-types/decimals.html
+++ b/math-types/decimals.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     
-    <h1>Not Finished YET</h1>
+
+    <div class="abt">
+        <h1>Not Finished YET</h1>
+        <a href="/index.html">Want To Go Back?</a>
+    </div>
 
 </a>
 </div>
