--- a/math-types/division/2s.html
+++ b/math-types/division/2s.html
@@ -10,6 +10,7 @@
     
     <div class="abt">
         <h1>2's Excercises</h1>
+        <a href="/math-types/division.html">Want To Go Back?</a>
         </div>
 
 <div class="excercises">
