--- a/math-types/subtraction.html
+++ b/math-types/subtraction.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-
-    <div class="abt">
-        <h1>Pages</h1>
-        <a href="/index.html">
-            <button>Go back to Home</button>
-            <a href="/index.html">Clicked the wrong button?</a>
-            </a>
-            </div>
     
+    <div class="abt">
+        <a href="/index.html">Want To Go Back?</a>
     <h1>Select the Numbers you want to learn:</h1>
+    </div>
 
     <div class="selection">
     <a href="/math-types/subtraction/1s.html">
