--- a/math-types/subtraction/10s.html
+++ b/math-types/subtraction/10s.html
@@ -10,7 +10,8 @@
     
     <div class="abt">
         <h1>10's Excercises</h1>
-        </div>
+            <a href="/math-types/subtraction.html">Want To Go Back?</a>
+            </div>
 
 <div class="excercises">
     <h1>1's excercises</h1>
