--- a/math-types/subtraction/2s.html
+++ b/math-types/subtraction/2s.html
@@ -10,11 +10,13 @@
     
     <div class="abt">
         <h1>2's Excercises</h1>
+        <a href="/math-types/subtraction.html">Want To Go Back?</a>
         </div>
 
 <div class="excercises">
     <h1>2's excercises</h1>
     <p>2 - 1 <input placeholder="2 - 1"></input></p>
+    <p>2 - 2 <input placeholder="2 - 2"></input></p>
     </div>
     
 
