--- a/math-types/subtraction/9s.html
+++ b/math-types/subtraction/9s.html
@@ -10,7 +10,9 @@
     
     <div class="abt">
         <h1>1's Excercises</h1>
+            <a href="/math-types/subtraction.html">Want To Go Back?</a>
         </div>
+        
 
 <div class="excercises">
     <h1>9's excercises</h1>
