fixed some links and stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Mathy+-=</h1>
     <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
     <p>Also make sure to have someone check on your work once you finish your practice!</p>
-    <a href="https://github.com/GMDPLUTONIC/Mathy/releases">Download for Android at the github</a>
+    <a href="https://github.com/GMDPLUTONIC/Mathy/releases/latest" target="_blank">You can get the latest release for android here:</a>
 </div>
 
 <a href="/math-types/addition.html">
@@ -34,7 +34,7 @@
         <a href="/math-types/multiplication.html">
             <div class="selection btn">
             <div class="selection">
-            <button>Start Learning Multiplication (* or x) (not implemented yet)</button>
+            <button>Start Learning Multiplication (* or x)</button>
         </a>
             </div>
             </div>
@@ -42,7 +42,7 @@
             <a href="/math-types/division.html">
                 <div class="selection btn">
                 <div class="selection">
-                <button>Start Learning Division (/ or ÷) (not finished yet)</button>
+                <button>Start Learning Division (/ or ÷)</button>
                 </a>
                 </div>
                 </div>
@@ -50,8 +50,10 @@
 
 
                 <div class="abt">
-                    <h1>SPECIAL THANKS:</h1>
 
+                    <p>Note: Mathy+-= is still under developement and will have many more features later on</p>
+
+                    <h1>SPECIAL THANKS:</h1>
                     <h1>Made with <a href="https://github.com">Github</a> and <a href="https://vercel.com"> Vercel</a></h1>
                     <p>Developed By <a href="https://github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
 <p>Made for <a href="https://humbleisd.net"><abbr title="Humble independent School District">HumbleISD</abbr></p>
