--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     <p>Note: Mathy+-= is still under developement and will have many more features later on</p>
 
                     <h1>SPECIAL THANKS:</h1>
-                    <h1>Made with <a href="https://github.com">Github</a> and <a href="https://vercel.com"> Vercel</a></h1>
-                    <p>Developed By <a href="https://github.com/GMDPLUTONIC"> GMDPLUTONIC/GMP</a></p>
-<p>Made for <a href="https://humbleisd.net"><abbr title="Humble independent School District">HumbleISD</abbr></p>
+                    <h1>Made with <a href="https://github.com" target="_blank">Github</a> and <a href="https://vercel.com" target="_blank"> Vercel</a></h1>
+                    <p>Developed By <a href="https://github.com/GMDPLUTONIC" target="_blank"> GMDPLUTONIC/GMP</a></p>
+<p>Made for <a href="https://humbleisd.net" target="_blank"><abbr title="Humble independent School District">HumbleISD</abbr></p>
 
                 </div>
     
