--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 
 <div class="abt">
     <h1>Mathy+-=</h1>
+
     <p>Mathy+-= is a FREE math website made for children who are in need to learn their math, or want to try to improve with their math skills.</p>
     <p>Also make sure to have someone check on your work once you finish your practice!</p>
     <a href="https://github.com/GMDPLUTONIC/Mathy/releases/latest" target="_blank">You can get the latest release for android here:</a>
+        <abbr title="Make Decimals, Fractions, Multplication For Main Levels,  Division For Main Levels, And  A Countdown For Main Levels"><p>To Do</p></abbr>
 </div>
 
-<a href="/math-types/addition.html">
+<div class="main-levels">
+    <a href="/main-levels">
+    <button>Main Levels</button>
+    </div>
+
+<a href="math-types/addition">
     <div class="selection btn">
     <div class="selection">
     <button>Start Learning Addition (+)</button>
@@ -23,7 +30,7 @@
     </div>
     </div>
 
-    <a href="/math-types/subtraction.html">
+    <a href="math-types/subtraction">
         <div class="selection btn">
         <div class="selection">
         <button>Start Learning Subtraction (-)</button>
@@ -31,7 +38,7 @@
         </div>
         </div>
 
-        <a href="/math-types/multiplication.html">
+        <a href="math-types/multiplication">
             <div class="selection btn">
             <div class="selection">
             <button>Start Learning Multiplication (* or x)</button>
@@ -39,13 +46,14 @@
             </div>
             </div>
 
-            <a href="/math-types/division.html">
+            <a href="math-types/division">
                 <div class="selection btn">
                 <div class="selection">
                 <button>Start Learning Division (/ or ÷)</button>
                 </a>
                 </div>
                 </div>
+                
 
 
 
@@ -60,5 +68,5 @@
 
                 </div>
     
-</body>
-</html>
+            </body>
+            </html>
