--- a/math-types/addition/index.html
+++ b/math-types/addition/index.html
@@ -11,46 +11,45 @@
     <div class="abt">
         <a href="/index.html">Want To Go Back?</a>
     <h1>Select the Numbers you want to learn:</h1>
-    </div>
-
+    
     <div class="selection">
-    <a href="/math-types/addtition/1s.html">
+    <a href="1s.html">
     <button>Start learing 1's</button>
 
     <div class="selection">
-        <a href="/math-types/addtition/2s.html">
+        <a href="2s.html">
         <button>Start learing 2's</button>
 
         <div class="selection">
-            <a href="/math-types/addtition/3s.html">
+            <a href="3s.html">
             <button>Start learing 3's</button>
 
             <div class="selection">
-                <a href="/math-types/addtition/4s.html">
+                <a href="4s.html">
                 <button>Start learing 4's</button>
 
                 <div class="selection">
-                    <a href="/math-types/addtition/5s.html">
+                    <a href="5s.html"></a>
                     <button>Start learing 5's</button>
 
                     <div class="selection">
-                        <a href="/math-types/addtition/6s.html">
+                        <a href="6s.html"></a>
                         <button>Start learing 6's</button>
 
                         <div class="selection">
-                            <a href="/math-types/addtition/7s.html">
+                            <a href="7s.html"></a>
                             <button>Start learing 7's</button>
 
                             <div class="selection">
-                                <a href="/math-types/addtition/8s.html">
+                                <a href="8s.html">
                                 <button>Start learing 8's</button>
 
                                 <div class="selection">
-                                    <a href="/math-types/addtition/9s.html">
+                                    <a href=9s.html">
                                     <button>Start learing 9's</button>
 
                                     <div class="selection">
-                                        <a href="/math-types/addtition/10s.html">
+                                        <a href="10s.html">
                                         <button>Start learing 10's</button>
 
 </a>
