--- a/math-types/division/index.html
+++ b/math-types/division/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math+-= | Learn Multiplication (*/x)</title>
+    <title>Math+-= | Learn Division (/)</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -14,43 +14,43 @@
     </div>
 
     <div class="selection">
-    <a href="/math-types/multiplication/1s.html">
+    <a href="1s.html">
     <button>Start learing 1's</button>
 
     <div class="selection">
-        <a href="/math-types/multiplication/2s.html">
+        <a href="2s.html">
         <button>Start learing 2's</button>
 
         <div class="selection">
-            <a href="/math-types/multiplication/3s.html">
+            <a href="3s.html">
             <button>Start learing 3's</button>
 
             <div class="selection">
-                <a href="/math-types/multiplication/4s.html">
+                <a href="4s.html">
                 <button>Start learing 4's</button>
 
                 <div class="selection">
-                    <a href="/math-types/multiplication/5s.html">
+                    <a href="5s.html">
                     <button>Start learing 5's</button>
 
                     <div class="selection">
-                        <a href="/math-types/multiplication/6s.html">
+                        <a href="6s.html">
                         <button>Start learing 6's</button>
 
                         <div class="selection">
-                            <a href="/math-types/multiplication/7s.html">
+                            <a href="7s.html">
                             <button>Start learing 7's</button>
 
                             <div class="selection">
-                                <a href="/math-types/multiplication/8s.html">
+                                <a href="8s.html">
                                 <button>Start learing 8's</button>
 
                                 <div class="selection">
-                                    <a href="/math-types/multiplication/9s.html">
+                                    <a href="9s.html">
                                     <button>Start learing 9's</button>
 
                                     <div class="selection">
-                                        <a href="/math-types/multiplication/10s.html">
+                                        <a href="10s.html">
                                         <button>Start learing 10's</button>
 
 </a>
