--- a/math-types/subtraction/index.html
+++ b/math-types/subtraction/index.html
@@ -14,43 +14,43 @@
     </div>
 
     <div class="selection">
-    <a href="/math-types/subtraction/1s.html">
+    <a href="1s.html">
     <button>Start learing 1's</button>
 
     <div class="selection">
-        <a href="/math-types/subtraction/2s.html">
+        <a href="2s.html">
         <button>Start learing 2's</button>
 
         <div class="selection">
-            <a href="/math-types/subtraction/3s.html">
+            <a href="3s.html">
             <button>Start learing 3's</button>
 
             <div class="selection">
-                <a href="/math-types/subtraction/4s.html">
+                <a href="4s.html">
                 <button>Start learing 4's</button>
 
                 <div class="selection">
-                    <a href="/math-types/subtraction/5s.html">
+                    <a href="5s.html">
                     <button>Start learing 5's</button>
 
                     <div class="selection">
-                        <a href="/math-types/subtraction/6s.html">
+                        <a href="6s.html">
                         <button>Start learing 6's</button>
 
                         <div class="selection">
-                            <a href="/math-types/subtraction/7s.html">
+                            <a href="7s.html">
                             <button>Start learing 7's</button>
 
                             <div class="selection">
-                                <a href="/math-types/subtraction/8s.html">
+                                <a href="8s.html">
                                 <button>Start learing 8's</button>
 
                                 <div class="selection">
-                                    <a href="/math-types/subtraction/9s.html">
+                                    <a href="9s.html">
                                     <button>Start learing 9's</button>
 
                                     <div class="selection">
-                                        <a href="/math-types/subtraction/10s.html">
+                                        <a href="10s.html">
                                         <button>Start learing 10's</button>
 
 </a>
