--- a/main-levels/levels/subtraction/index.html
+++ b/main-levels/levels/subtraction/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
 
-    <h1>Mixed subtraction test</h1>
+    <div class="abt">
+        <h1>Mixed Subtraction Test</h1>
+    <a href="/main-levels/">Want To Go Back?</a>
+    </div>
 
-
+<div class="excercises">
 <p>4 - 7<input placeholder="4 - 7"></input></p>
 <p>8 - 1<input placeholder="8 - 1"></input></p>
 <p>7 - 12<input placeholder="7 - 12"></input></p>
