--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         <abbr title="Make Decimals, Fractions, Multplication For Main Levels,  Division For Main Levels, And  A Countdown For Main Levels"><p>To Do</p></abbr>
 </div>
 
-<div class="main-levels">
-    <a href="/main-levels">
-    <button>Main Levels</button>
-    </div>
+
 
 <a href="math-types/addition">
     <div class="selection btn">
@@ -54,8 +51,11 @@
                 </div>
                 </div>
                 
-
-
+<div class="main-levels">
+    <a href="/main-levels">
+    <button>Main Levels (Mixed test)</button>
+    </div>
+</a>
 
                 <div class="abt">
 
@@ -65,6 +65,7 @@
                     <h1>Made with <a href="https://github.com" target="_blank">Github</a> and <a href="https://vercel.com" target="_blank"> Vercel</a></h1>
                     <p>Developed By <a href="https://github.com/GMDPLUTONIC" target="_blank"> GMDPLUTONIC/GMP</a></p>
 <p>Made for <a href="https://humbleisd.net" target="_blank"><abbr title="Humble independent School District">HumbleISD</abbr></p>
+    <p>if you have any issues report them at the <a href="https://github.com/GMDPLUTONIC/Mathy">github</a></p>
 
                 </div>
     
