--- a/math-types/multiplication/10s.html
+++ b/math-types/multiplication/10s.html
@@ -27,6 +27,15 @@
     <p>10 * 10 <input placeholder="10 * 10"></input></p>
     </div>
     
+    <div class="abt">
+
+        <p>Note: Mathy+-= is still under developement and will have many more features later on</p>
+    
+        <h1>SPECIAL THANKS:</h1>
+        <h1>Made with <a href="https://github.com" target="_blank">Github</a> and <a href="https://vercel.com" target="_blank"> Vercel</a></h1>
+        <p>Developed By <a href="https://github.com/GMDPLUTONIC" target="_blank"> GMDPLUTONIC/GMP</a></p>
+    <p>Made for <a href="https://humbleisd.net" target="_blank"><abbr title="Humble independent School District">HumbleISD</abbr></p>
+    </div>
 
 </body>
 </html>
