--- a/math-types/subtraction/1's/index.html
+++ b/math-types/subtraction/1's/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mathy+-= | 4's</title>
+    <title>Mathy+-= | 1's</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     
     <div class="abt">
-        <h1>4's Excercises</h1>
-        <a href="/math-types/division.html">Want To Go Back?</a>
+        <h1>1's Excercises</h1>
+        <a href="/math-types/subtraction.html">Want To Go Back?</a>
         </div>
 
 <div class="excercises">
-    <h1>4's excercises</h1>
-    <p>4 / 1 <input placeholder="4 / 1"></input></p>
-    <p>4 / 2 <input placeholder="4 / 2"></input></p>
-    <p>4 / 3 <input placeholder="4 / 3"></input></p>
-    <p>4 / 4 <input placeholder="4 / 4"></input></p>
+    <h1>1's excercises</h1>
+    <p>1 - 1 <input placeholder="1 - 1"></input></p>
     </div>
     
     <div class="abt">
